kinda responsive css

--- a/page1.html
+++ b/page1.html
@@ -1,15 +1,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Core Bank</title>
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
-      <nav class="top_nav">
-          <div class="left nav_icon"><img src="images/nav-icon.svg"></div>
-          <div class="center nav_icon"><img src="images/core-bank-logo.svg"></div>
-          <div class="right nav_icon"><img src="images/avatar-icon.svg"></div>
-        </nav>
+      <nav class="top_nav"><div class="left nav_icon"><img src="images/nav-icon.svg">
+          </div><div class="center nav_icon"><img src="images/core-bank-logo.svg">
+          </div><div class="right nav_icon"><img src="images/avatar-icon.svg"></div></nav>
         <div class="splash">
             <span class="white pretty line1">We came from</span>
             <span class="white pretty line2">two local banks</span>
